imgopt/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imgopt
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 2
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: imgopt
  template:
    metadata:
      labels:
        app: imgopt
    spec:
      containers:
      - name: imgopt
        image: 011737333588.dkr.ecr.us-east-1.amazonaws.com/imgopt:main-e7efab4
        imagePullPolicy: IfNotPresent
        command: ["./imgopt"]
        ports:
        - containerPort: 3030
          name: imgopt
        resources:
          requests:
            memory: 128Mi
            cpu: 250m
          limits:
            memory: 3Gi
            cpu: 2000m
        volumeMounts:
        - name: imgopt-config
          mountPath: /home/imgopt/config.toml
          subPath: config.toml
        - name: cf-creds
          mountPath: "/home/imgopt/.aws"
          readOnly: true
        - name: imgopt-data-efs
          mountPath: /home/imgopt/data
        livenessProbe:
          httpGet:
            path: /health
            port: 3030
          initialDelaySeconds: 50
          periodSeconds: 50
      volumes:
        - name: cf-creds
          secret:
            secretName: cloudfront-creds
            optional: false 
        - name: imgopt-config
          configMap:
            name: imgopt-config
        - name: imgopt-data-efs
          persistentVolumeClaim:
            claimName:  efs-claim-imgopt-data
