imgopt/app/smol-kv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smol-kv
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 2
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: smol-kv
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
        config.linkerd.io/proxy-log-level: warn
      labels:
        app: smol-kv
    spec:
      containers:
      - image: ghcr.io/mpwsh/smol-kv:amd64-latest
        imagePullPolicy: Always
        name: smol-kv
        ports:
        - containerPort: 5050
          name: smol-kv
        resources:
          requests:
            memory: 128Mi
            cpu: 250m
          limits:
            memory: 2Gi
            cpu: 1000m
        volumeMounts:
        - name: storage
          mountPath: /rocksdb
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName:  smol-kv-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: smol-kv
spec:
  selector:
    app: smol-kv
  ports:
  - name: http
    port: 5050
    targetPort: 5050
  type: ClusterIP
